chore(package.json): Improved publish script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "test": "mocha --reporter spec --compilers ts:ts-node/register 'src/**/*.spec.ts'",
     "release": "tsc && standard-version",
-    "pub": "tsc && npm publish"
+    "pub": "git push --follow-tags origin master && tsc && npm publish"
   },
   "keywords": [
     "json",
