--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ts.data.json",
-  "version": "1.0.0",
+  "name": "ts-data-json",
+  "version": "1.0.0-fix",
   "description": "A JSON decoding library for Typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
