--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "chai": "^4.2.0",
     "mocha": "^5.2.0",
     "prettier": "^1.15.3",
-    "standard-version": "^4.4.0",
+    "standard-version": "7.0.0",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2"
   }
