--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
   "name": "ts.data.json",
-  "version": "0.3.0",
+  "version": "1.0.0",
   "description": "A JSON decoding library for Typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --reporter spec --compilers ts:ts-node/register 'src/**/*.spec.ts'",
-    "release": "npm run build && npm run test && standard-version",
-    "release-patch": "npm run release -- --release-as patch",
-    "release-minor": "npm run release -- --release-as minor",
-    "release-major": "npm run release -- --release-as major",
-    "pub": "git push --follow-tags origin master && tsc && npm publish"
+    "test": "mocha --require ts-node/register 'src/**/*.spec.ts'",
+    "lint": "tslint -p ./tsconfig.json",
+    "prepub": "npm run test && npm run lint",
+    "pub": "npm run build && npm publish"
   },
   "keywords": [
     "json",
@@ -37,13 +35,13 @@
   },
   "homepage": "https://github.com/joanllenas/ts.data.json#readme",
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.5",
+    "@types/chai": "^4.2.5",
+    "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "mocha": "^5.2.0",
-    "prettier": "^1.15.3",
-    "standard-version": "7.0.0",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.2.2"
+    "mocha": "^6.2.2",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3"
   }
 }
